Tony Meyer	25/05/03	Expose experimental ham/spam imbalance option to pop3proxy/imapfilter users
Tim Peters	25/05/03	Restore __slots__ declaration to WordInfo object in classifier.py
Tim Peters	25/05/03	PickledClassifier.load():  use getstate/setstate to copy the state. 
Tony Meyer	26/05/03	Fix SF#737986 ('Message.as_string() fails.').
Tony Meyer	26/05/03	Restore notate_to and notate_subject functionality to pop3proxy.
Mark Hammond    29/05/03    DB classifier keeps a list of "changed words" to prevent saves from updating *all* words.
Mark Hammond    29/05/03    DB classifier doesn't cache hapaxes.
Mark Hammond    03/06/03    Handle malformed messages better in the Outlook plugin.
Mark Hammond    03/06/03    In Outlook plugin, create our own toolbar, rather than using the standard one.
Mark Hammond    03/06/03    Fix an Outlook plugin error that would try to save the database when classifying.
Mark Hammond    03/06/03    Make Outlook plugin log refer to "Spambayes" rather than "SpamAddin"
Mark Hammond    03/06/03    Use 'wait' cursor when incremental training in Outlook plugin.
Mark Hammond    03/06/03    In Outlook plugin, save config when dialog closes and not at shutdown.
Mark Hammond    03/06/03    Clean up toolbar images.
Mark Hammond    04/06/03    In Outlook plugin, no longer default to the "Inbox" (see also SF#741797 ('Does not filter incoming mail')).
Mark Hammond    04/06/03    In Outlook plugin, when filtering, saving the spam score is no longer fatal.
Tony Meyer  04/06/03    In muttrc, fix incorrect Spambayes header name.
Mark Hammond    05/06/03    Add a version information repository.
Mark Hammond    05/06/03    Change Outlook plugin to use new version information repository.
Neale Pickett   06/06/03    Integrated code for the VM mailer into spambayes.el
Tony Meyer  08/06/03    Add pop3proxy, hammie, smtpproxy & imapfilter version information.
Skip Montanaro  10/06/03    Correction to VM mailer addition to spambayes.el